<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/ciemnetloo"
    tools:context="pl.pjay.enguage.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:paddingTop="@dimen/vertical_center_padding">

        <Button
            android:id="@+id/wordsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="clickWords"
            android:text="@string/words_text"
            android:textColor="@android:color/white" />

        <Button
            android:text="@string/phrasalVerbs_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:onClick="clickPhrasalVerbs"
            android:id="@+id/phrasalVerbsButton" />

        <Button
            android:text="@string/option_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="15dp"
            android:onClick="clickOptions"
            android:id="@+id/optionsButton" />

        <Button
            android:text="@string/exit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="15dp"
            android:onClick="clickExit"
            android:id="@+id/exitButton" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/enguage_logo"
        android:foregroundGravity="center_vertical"
        android:paddingTop="45dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:id="@+id/enguage_logo_activity_main"
        android:onClick="clickTranslateWord"
        android:contentDescription="@string/menu_enguage_logo" />


</RelativeLayout>
