<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/ciemnetloo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.pjay.enguage.OptionsActivity"
    tools:showIn="@layout/activity_options">

    <Button
        android:text="@string/addWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/option_margin_top"
        android:onClick="clickAddWord"
        android:id="@+id/addWordButton" />

    <Button
        android:text="@string/deleteWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_below="@+id/addWordButton"
        android:layout_alignLeft="@+id/addWordButton"
        android:layout_alignStart="@+id/addWordButton"
        android:layout_marginTop="@dimen/option_margin_top"
        android:onClick="clickDeleteWord"
        android:id="@+id/deleteWordButton" />

    <Button
        android:text="@string/databaseManagement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_below="@+id/deleteWordButton"
        android:layout_alignLeft="@+id/deleteWordButton"
        android:layout_alignStart="@+id/deleteWordButton"
        android:layout_marginTop="@dimen/option_margin_top"
        android:onClick="clickDatabaseManagement"
        android:id="@+id/databaseManagementButton" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/enguage_logo"
        android:foregroundGravity="center_vertical"
        android:paddingTop="45dp"
        android:id="@+id/enguage_logo_activity_main"
        android:contentDescription="@string/menu_enguage_logo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>