<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/ciemnetloo"
    tools:context="pl.pjay.enguage.GameActivity"
    tools:showIn="@layout/activity_game">

    <TextView
        android:text=""
        android:textSize="20sp"
        android:textColor="@color/icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/categoryNameTextView" />

    <TextView
        android:text="@string/streak_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/categoryNameTextView"
        android:textColor="@color/icons"
        android:textSize="20sp"
        android:layout_marginRight="7dp"
        android:layout_marginEnd="7dp"
        android:id="@+id/wordStreakTextView" />

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wordStreakTextView"
        android:textColor="@color/icons"
        android:textSize="15sp"
        android:id="@+id/wordStreakNumberTextView"
        android:layout_alignRight="@+id/wordStreakTextView"
        android:layout_alignEnd="@id/wordStreakTextView" />

    <TextView
        android:text="xxx"
        android:textColor="@color/icons"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wordToGuessTextView"
        android:layout_below="@+id/wordStreakNumberTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/enguage_logo"
        android:foregroundGravity="center_vertical"
        android:paddingTop="45dp"
        android:id="@+id/enguage_logo_activity_main"
        android:contentDescription="@string/menu_enguage_logo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/game_insert_text_hint"
        android:selectAllOnFocus="true"
        android:textSize="25sp"
        android:textColor="@color/icons"
        android:textColorHint="@color/icons"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:ems="15"
        android:id="@+id/wordAnswerEditText"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/wordToGuessTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/checkWordButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:onClick="clickCheckWord"
        android:id="@+id/checkWordButton"
        android:layout_below="@+id/wordAnswerEditText"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
