<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_delete_word"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/ciemnetloo"
    tools:context="pl.pjay.enguage.DeleteWordActivity"
    tools:showIn="@layout/activity_delete_word">


        <TextView
            android:text="@string/chooseCategoryFromList"
            android:textColor="@color/icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/chooseCategoryFromListTextView" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/categories"
            android:background="@color/icons"
            android:dropDownSelector="@color/colorAccent"
            android:id="@+id/deleteWordCategorySpinner"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/chooseCategoryFromListTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:hint="Wpisz polskie słowo do usunięcia..."
            android:textColorHint="@color/icons"
            android:textColor="@color/icons"
            android:ems="20"
            android:layout_marginTop="65dp"
            android:id="@+id/deletePlWordEditText"
            android:layout_below="@+id/deleteWordCategorySpinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    <Button
            android:text="@string/deleteWordButtonText"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deletingWordButton"
            android:onClick="clickDeletingWord"
            android:layout_marginTop="65dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/enguage_logo"
        android:foregroundGravity="center_vertical"
        android:paddingTop="45dp"
        android:id="@+id/enguage_logo_activity_main"
        android:contentDescription="@string/menu_enguage_logo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    </RelativeLayout>


